# lab_IA-GI

./: README.md
lab_ai_gi/: .gitignore
lab_ai_gi/datasets/: README
lab_ai_gi/exercises/HW1_wrapping_orazio/: orazio_wrapper.cpp  orazio_wrapper.h
lab_ai_gi/exercises/HW2_laser_mapper/: package.xml
lab_ai_gi/exercises/HW2_laser_mapper/src/mapper/: mapper.cpp
lab_ai_gi/exercises/HW2_laser_mapper/src/node/: CMakeLists.txt
lab_ai_gi/exercises/HW2_laser_mapper/src/utils/: canvas.cpp  canvas.h  geometry_utils_fd.h
lab_ai_gi/exercises/HW3_navigation/: navigation_homework.sh
lab_ai_gi/source/cpp_lectures/: 03_constructors.cpp  04_inheritance.cpp  05_subclasses_protected_private.cpp  06_templates.cpp  07_late_binding.cpp  Makefile
lab_ai_gi/source/dump_orazio_odom/: CMakeLists.txt  package.xml
lab_ai_gi/source/dump_orazio_odom/src/: dump_orazio_odom_node.cpp
laboratorio_ia/: .gitignore  README.md
laboratorio_ia/homework/action_hw/hw_1/: README.md  hw1.sh
laboratorio_ia/homework/action_hw/hw_1/my_counter/: CMakeLists.txt  package.xml
laboratorio_ia/homework/action_hw/hw_1/my_counter/action/: Counter.action
laboratorio_ia/homework/action_hw/hw_1/my_counter/src/: counter_client_node.cpp  counter_server_node.cpp
laboratorio_ia/homework/action_hw/hw_2/: hw2.sh
laboratorio_ia/homework/action_hw/hw_2/barbablu/: CMakeLists.txt  package.xml  readme.md
laboratorio_ia/homework/action_hw/hw_2/barbablu/src/: barbablu_node.cpp
laboratorio_ia/homework/action_hw/hw_3/: hw3.sh
laboratorio_ia/homework/action_hw/hw_3/aiml/: barbablu_BASIC.aiml  barbablu_GREETINGS.aiml  barbablu_MISC.aiml
laboratorio_ia/homework/action_hw/hw_3/experimental/: barbablu_BASIC.aiml  barbablu_GREETINGS.aiml  barbablu_MISC.aiml
laboratorio_ia/homework/hw_1/: orazio_wrapper.cpp
laboratorio_ia/homework/hw_1/1/: README
laboratorio_ia/homework/hw_2/: README.md  test.py
laboratorio_ia/homework/hw_2/laser_mapper/: CMakeLists.txt
laboratorio_ia/homework/hw_2/laser_mapper/src/mapper/: mapper.cpp  mapper.h
laboratorio_ia/homework/hw_2/laser_mapper/src/node/: CMakeLists.txt  laser_mapper_node.cpp
laboratorio_ia/homework/hw_2/laser_mapper_position/: CMakeLists.txt  package.xml
laboratorio_ia/homework/hw_2/laser_mapper_position/src/: CMakeLists.txt
laboratorio_ia/homework/hw_2/laser_mapper_position/src/mapperPosition/: CMakeLists.txt  mapper.cpp
laboratorio_ia/homework/hw_2/laser_mapper_position/src/node/: CMakeLists.txt  laser_mapper_position_node.cpp
laboratorio_ia/homework/hw_2/laser_position/: CMakeLists.txt  package.xml
laboratorio_ia/homework/hw_2/laser_position/src/mapper/: CMakeLists.txt  mapper.cpp  mapper.h
laboratorio_ia/homework/hw_2/laser_position/src/node/: CMakeLists.txt  laser_position_node.cpp
laboratorio_ia/homework/hw_3/: README.md
laboratorio_ia/homework/hw_3/dataset/map/: homework_map.yaml
laboratorio_ia/homework/hw_4/: .gitignore  README.md  launch.sh  tempPub.cpp
laboratorio_ia/homework/hw_4/ros_filter/: README.md
laboratorio_ia/homework/hw_4/ros_filter/video_filter/: CMakeLists.txt  package.xml  video_filter.cpp  video_filter.h  video_filter_node.cpp
laboratorio_ia/homework/hw_4/ros_filter/video_reader/: CMakeLists.txt  package.xml  video_reader.cpp  video_reader.h  video_reader_node.cpp
laboratorio_ia/homework/hw_4/video_publisher/: CMakeLists.txt  package.xml
laboratorio_ia/homework/hw_4/video_publisher/src/: video_publisher_node.cpp  video_reader_node.cpp
laboratorio_ia/homework/hw_5/: .gitignore  README.md
laboratorio_ia/homework/hw_5/hw_pcl/: CMakeLists.txt  package.xml
laboratorio_ia/homework/hw_5/hw_pcl/src/: README.md  hw_pcl_node.cpp  hw_pcl_reader.cpp  hw_pcl_subscriber.cpp  png2pcd_batch.cpp
laboratorio_ia/homework/hw_6/: README.md
laboratorio_ia/homework/hw_6/YOLO/: README.md
laboratorio_ia/homework/hw_6/face_detection/: face_detection_node.cpp  haarcascade_frontalface_alt.xml
laboratorio_ia/homework/semantic map/: start.sh
my_homeworks/: .gitignore
my_homeworks/actionServer/: CMakeLists.txt  action_server_node.cpp  package.xml
my_homeworks/actionServer/action/: countdown.action
my_homeworks/actionServer/msg/: countdownFeedback.msg  countdownGoal.msg
my_homeworks/detectionNN/face_detection/: CMakeLists.txt  face_detection_node.cpp  face_detection_node.cpp~  package.xml
my_homeworks/detectionNN/mnist_example/: mnist.py  mnist_example.py  mnist_example.py~
my_homeworks/localization/mo_tf_publisher/: CMakeLists.txt  package.xml
my_homeworks/localization/mo_tf_publisher/src/: CMakeLists.txt
my_homeworks/localization/mo_tf_publisher/src/node/: CMakeLists.txt  mapOdom_tf_node.cpp  mapOdom_tf_node.cpp~
my_homeworks/localization/mo_tf_publisher/src/publisher/: CMakeLists.txt  mapOdom.cpp  mapOdom.cpp~  mapOdom.h  mapOdom.h~
my_homeworks/mappers/odom_laser_tf/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
my_homeworks/mappers/odom_laser_tf/src/mapper/: CMakeLists.txt  mapper.cpp  mapper.cpp~  mapper.h~
my_homeworks/mappers/odom_laser_tf/src/node/: CMakeLists.txt  CMakeLists.txt~  odom_laser_node.cpp
my_homeworks/mappers/odom_laser_tf/src/utils/: CMakeLists.txt
my_homeworks/mappers/stage_mapper/: CMakeLists.txt  package.xml
my_homeworks/mappers/stage_mapper/src/: CMakeLists.txt
my_homeworks/mappers/stage_mapper/src/mapper/: CMakeLists.txt  mapper.cpp  mapper.cpp~
my_homeworks/mappers/stage_mapper/src/node/: CMakeLists.txt
my_homeworks/mappers/stage_mapper/src/utils/: CMakeLists.txt
my_homeworks/openCV/video_filter/: CMakeLists.txt  package.xml  video_filter.cpp  video_filter.cpp~  video_filter.h  video_filter.h~  video_filter_node.cpp  video_filter_node.cpp~
my_homeworks/openCV/video_reader/: CMakeLists.txt  package.xml  video_reader.cpp  video_reader.h  video_reader.h~  video_reader_node.cpp  video_reader_node.cpp~
my_homeworks/point_cloud/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
my_homeworks/point_cloud/src/: CMakeLists.txt  point_cloud_node.cpp  point_cloud_node.cpp~  point_reader_node.cpp  point_reader_node.cpp~
